# liraV2

./: .env.example  .gitignore  AGENTS.md  LIRA_SYSTEM.md  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  start-lira.bat  stop-lira.bat  tsconfig.base.json
apps/lira-chat/: index.html  package.json  start.bat  vite.config.ts
apps/lira-chat/backend/: comfyui_handler.py  conversation_log.py  lore_manager.py  main.py  mode_router.py  prompt_assembler.py  requirements.txt  settings.py  tts_client.py
apps/lira-chat/src/: App.tsx  AudioControls.tsx  ChatPage.tsx  ChatView.tsx  DebugPanel.tsx  ErrorToast.tsx  LogsPanel.tsx  LoreCreator.tsx  LoreEditModal.tsx  LorePage.tsx  LorePanel.tsx  MessageInput.tsx  ModeSelector.tsx  PersonalityEditor.tsx  SnapshotsPanel.tsx  WebSocketProvider.tsx  audio-player.ts  main.tsx  useWebSocket.ts
apps/lira-chat/tools/: import_lore.py
apps/memory-service/: pyproject.toml
apps/memory-service/src/: config.py  embedder.py  logging.py  main.py  st_bridge.py  summarizer.py  vector_store.py
apps/memory-service/src/models/: memory.py
apps/orchestrator-api/: pyproject.toml
apps/orchestrator-api/src/: avatar_signals.py  companion_loop.py  config.py  embedding_service.py  emotion_engine.py  intent_detector.py  internal_thoughts.py  logging.py  main.py  memory_retriever.py  memory_summarizer.py  memory_writer.py  models.py  ollama_client.py  postgres_client.py  prompt_composer.py  qdrant_client.py  sfx_converter.py
apps/orchestrator-api/src/routes/: chat.py  emotion.py  memory.py  openai_compat.py
apps/orchestrator-api/tests/: conftest.py
apps/voice-runtime/: pyproject.toml
apps/voice-runtime/src/: audio_queue.py  breath_sounds.py  config.py  hybrid_audio.py  log.py  logging.py  main.py  obs_bridge.py  obs_instance.py  phonetics.py  prosody.py  reaction_sounds.py  speech_parser.py  stt.py  tts.py
apps/voice-runtime/src/routes/: audio.py  obs.py  ollama_proxy.py  openai_proxy.py
apps/voice-runtime/tests/: conftest.py  test_moan_giggle_sigh.py
apps/web/: package.json
context/lira-v2/: DOC_INDEX.md
context/lira-v2/architecture/: orchestrator-architecture.md  pipecat-runtime.md  recommended-stack-2026.md  streaming-architecture.md  system-vision.md
context/lira-v2/lore/: between-lore.md  moonstache-integration.md  (+1 more)
docs/: lira_v_2_orchestrator_master_docs.md
services/kokoro-tts/: kokoro_stderr.txt  kokoro_stdout.txt  requirements.txt  server.py  start.bat
services/lira-v3/: requirements.txt  start.bat
services/obs-setup/: README.md  setup-obs.ps1  test-routing.ps1
services/whisper-stt/: server.py
tools/scripts/: init-db.sql  setup-sillytavern.md  update_lira_png.py
(+50 files in other folders)
